[package]
name = "http-version-check-server"
edition = "2018"
version = "0.1.0"
license = "MIT"
description = "A simple HTTP server that sends the HTTP version used."
readme = "README.md"
homepage = "https://github.com/nihaals/http-version-check-server"
repository = "https://github.com/nihaals/http-version-check-server"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
